Date	Added

2006/11/20
	* Added monster_ai&0x200 (monster.conf). When set, mob skill delays are
	  shared. That is, if the mob has several lines with the same skill, when the
	  skill is used, the delay will be set to all of them, not just the one entry
	  used. [Skotlex]
2006/11/07
	* Added nosave mapflag for Guild Dungeons [KarLaeda]
	* New Setting "stdout_with_ansisequence"
	  (login_athena/char_athena/map_athena) allows you to specify whether color
	  control chars should be printed or not. Is useful to disable for a
	  "cleaner" output when you are logging the console output. All credit goes
	  to FlavioJS for coding the whole thing. [Skotlex]
2006/11/05
	* Added maplags for PowerNPC quest. [KarLaeda]
2006/10/31
	* Modified the player_cloak_check_type and monster_cloak_check_type
	  settings. 1 makes it check for walls, 2 makes cloaking NOT end on normal
	  attacks, and 4 makes cloaking NOT end when using skills. The default
	  setting for players is still 1, but for mobs the default has been changed
	  to 4 (skill.conf). [Skotlex]
2006/10/25
	* Added exp-bonus settings exp_bonus_attacker and exp_bonus_max_attacker
	  (exp.conf, default to 25 and 12) [Skotlex]
	* Changed the way the party_even_share_bonus setting works. It now uses a
	  simple linear bonus increase (party.conf) [Skotlex]
2006/10/24
	* Changed the way the skill_steal_max_tries work. Now it actually MEANS the
	  max number of steal tries, use 0 to disable (unlimited tries). [Skotlex]
	* Changed the default of skill_steal_max_tries to 0 as there's no proof
	  anywhere that there should be such a limit. [Skotlex]
2006/10/20
	* Added config setting "summon_flora_setting" (skill.conf), with it you can
	  decide now two things: a. Whether or not players can harm your floras
	  outside versus grounds, and b. Whether or not you can summon out and mix
	  different types of plants at the same time. [Skotlex]
2006/10/19
	* Commented out the monster_noteleport mapflag from the guild castles as